2008-09-18  Neil Roberts  <neil@linux.intel.com>

	Bug 1048 - SIGFPE in cogl_texture_set_region() with nvidia

	* clutter/cogl/gl/cogl-texture.c (cogl_texture_set_region):
	* clutter/cogl/gles/cogl-texture.c (cogl_texture_set_region):
	Don't attempt to upload any data if the width or height of the
	subregion is zero. Thanks to Gwenole Beauchesne.

2008-09-18  Neil Roberts  <neil@linux.intel.com>

	Bug 1044 - cogl_get_viewport error

	* clutter/cogl/gles/cogl.c (cogl_get_viewport): Use glGetIntegerv
	instead of glGetFixedv to read the viewport because the latter
	converts incorrectly on some hardware.

2008-09-18  Neil Roberts  <neil@linux.intel.com>

	Bug 1080 - clutter_stage_read_pixels has upside-down y coordinate

	* clutter/clutter-stage.c (clutter_stage_read_pixels): Use
	OpenGL's coordinate system for the arguments to glReadPixels (so
	that y zero is the bottom of the window). Use clutter_redraw
	instead of clutter_stage_paint to ensure the right GL context is
	selected. Set some of the glPixelStore parameters that might have
	been changed by Cogl.

	* tests/test-stage-read-pixels.c: Replace with a different test
	that gets a sub-region of the stage around the cursor.

2008-09-17  Neil Roberts  <neil@linux.intel.com>

	Bug 1145 - Flicker on resize the window

	* clutter/glx/clutter-stage-glx.c (clutter_stage_glx_realize):
	Don't set a backing pixel on the X window. Otherwise when the
	window resizes it will flicker when X paints the background
	immediatly before Clutter repaints the whole stage.

2008-09-17  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-types.h: Swap left and right in the
	documentation for ClutterGravity.

2008-09-17  Neil Roberts  <neil@linux.intel.com>

	Bug 1121 - Setting anchor point doesn't work if set too early

	* clutter/clutter-actor.c
	(clutter_actor_set_anchor_point_from_gravity)
	(clutter_actor_move_anchor_point_from_gravity): Add documentation
	to make it clear that the anchor point won't move when the actor